--- a/css/teacherHomepage.css
+++ b/css/teacherHomepage.css
@@ -455,7 +455,6 @@
     box-sizing: border-box;
 }
 .teacher-navbar .navbar-logo {
-    position: relative;
     margin: 0;
 }
 .teacher-navbar .navbar-language-slot {
